--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "isolatedModules": true,
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react-jsx"
