--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "tempo-of-darkness",
-  "version": "0.1.0",
+  "author": "Matt Farejowicz",
+  "description": "Destiny themed, deck-building, roguelike",
+  "homepage": "http://mfarejowicz.github.io/tempo-of-darkness",
+  "license": "MIT",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bungie-api-ts": "^4.14.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
@@ -23,7 +28,9 @@
     "start": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
